--- a/css/style.scss
+++ b/css/style.scss
@@ -1,16 +1,31 @@
 * {
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 header {
-  width: 60vw;
   margin: 0 auto;
+  color: #001015;
+  padding: 0.1rem;
+}
+
+h1 {
+  font-size: 2rem;
 }
 
 button {
-    cursor: pointer;
-    margin: 1rem;
+  cursor: pointer;
+  margin: 1rem;
+  border: 0px;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  background: #001015;
+  color: #FFF;
+}
+
+input {
+  width: 3rem;
 }
 
 %center_flex {
@@ -33,4 +48,10 @@ button {
   flex-direction: row;
   grid-gap: 1rem;
   flex-wrap: nowrap;
+}
+
+.chart_container {
+  position: relative;
+  width: 90vw;
+  margin: 0 auto;
 }
