The first way of simulating (without calculating qn) was the correct one.

--- a/css/style.scss
+++ b/css/style.scss
@@ -35,16 +35,9 @@ input {
   align-items: center;
 }
 
-#input1 {
+.input {
   @extend %center_flex;
-  padding: 1rem;
-  flex-direction: row;
-  grid-gap: 1rem;
-  flex-wrap: nowrap;
-}
-
-#input2 {
-  @extend %center_flex;
+  padding: 0.5rem;
   flex-direction: row;
   grid-gap: 1rem;
   flex-wrap: nowrap;
