--- a/css/style.css
+++ b/css/style.css
@@ -28,21 +28,15 @@ input {
   width: 3rem;
 }
 
-#input2, #input1 {
+.input {
   display: flex;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
 }
 
-#input1 {
-  padding: 1rem;
-  flex-direction: row;
-  grid-gap: 1rem;
-  flex-wrap: nowrap;
-}
-
-#input2 {
+.input {
+  padding: 0.5rem;
   flex-direction: row;
   grid-gap: 1rem;
   flex-wrap: nowrap;
