--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {
 
 button {
   cursor: pointer;
-  margin: 1rem;
+  margin: 0 1rem 1rem 1rem;
   border: 0px;
   border-radius: 0.5rem;
   padding: 0.5rem 0.75rem;
